fix alignment of product search button

--- a/assets/main.css
+++ b/assets/main.css
@@ -82,6 +82,10 @@ button:hover,
   vertical-align: 1px;
 }
 
+.product-search {
+  margin-right: 0;
+}
+
 input {
   border-radius: 5px;
   color: #2f2951;
